--- a/sass/abstracts/_colors.sass
+++ b/sass/abstracts/_colors.sass
@@ -5,7 +5,7 @@ $accent: rgba(211, 24, 105, 1)
 $white: rgb(255, 255, 255)
 
 // ====== Text Colors ======= //
-$text-base: $secondary
+$text-main: $secondary
 $text-inverse: $white
 $text-accent: $accent
 $text-secondary: $main
