--- a/sass/components/_buttons.sass
+++ b/sass/components/_buttons.sass
@@ -4,6 +4,7 @@
   text:
     transform: uppercase
     decoration: none
+
   &:not(:last-of-type)
     margin-bottom: .6em
 
@@ -11,12 +12,17 @@
   background: $accent
   color: $text-inverse
   border: 2px solid $accent
-  &:hover, &:focus
+
+  &:hover,
+  &:focus
     background: darken($accent, 15%)
+    border-color:  darken($accent, 15%)
 
 .btn--secondary
   border: 2px solid $text-inverse
   color: $text-inverse
-  &:hover, &:focus
+
+  &:hover,
+  &:focus
     background: $text-inverse
     color: $text-main
