--- a/css/main.css
+++ b/css/main.css
@@ -407,6 +407,40 @@ template {
 [hidden] {
   display: none; }
 
+.grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.col {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  padding: 0 .75em; }
+  @media (min-width: 725px) {
+    .col:first-of-type {
+      padding-left: 0; }
+    .col:last-of-type {
+      padding-right: 0; } }
+
+.col--full {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%; }
+
+@media (min-width: 725px) {
+  .col--1-3 {
+    -ms-flex-preferred-size: 33.3333%;
+    flex-basis: 33.3333%; }
+  .col--2-3 {
+    -ms-flex-preferred-size: 66.6666%;
+    flex-basis: 66.6666%; }
+  .col--1-2 {
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%; } }
+
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
@@ -429,51 +463,80 @@ img {
   padding: 0;
   list-style: none; }
 
-h1, h1, h3, h4, h5, h6, p {
+.lg-screen {
+  display: none; }
+  @media (min-width: 725px) {
+    .lg-screen {
+      display: block; } }
+
+.bg-primary {
+  background: #048ca8;
+  color: white;
+  padding: 5em 2.5em; }
+
+h1, h2, h3, h4, h5, h6, p {
   margin: 0 0 .75em; }
 
-h1:last-child, h2:last-child, h3:last-child,
-h4:last-child, h5:last-child, h6:last-child,
-p:last-child {
+h1:last-child, h2:last-child, h3:last-child, h4:last-child, h5:last-child, h6:last-child, p:last-child {
   margin: 0; }
 
 h1 {
   font-size: 2rem;
   font-weight: 300;
   line-height: 1.15;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  letter-spacing: 3px; }
 
 h2 {
-  font-size: 3rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
-  letter-spacing: 1.5px;
+  letter-spacing: 2px;
   line-height: 1; }
 
 .title-large {
   font-size: 3rem;
-  font-weight: 900; }
+  font-weight: 900;
+  line-height: .9; }
   .title-large span {
     font-weight: 300; }
 
+.title-box {
+  background: #d31869;
+  color: white;
+  margin: 0 auto;
+  padding: 2em;
+  -webkit-transform: translateY(30%);
+  -ms-transform: translateY(30%);
+  transform: translateY(30%);
+  max-width: 90%; }
+  @media (min-width: 495px) {
+    .title-box {
+      -webkit-transform: translateY(50%);
+      -ms-transform: translateY(50%);
+      transform: translateY(50%); } }
+  .title-box + .bg-primary {
+    padding-top: 6em; }
+    @media (min-width: 495px) {
+      .title-box + .bg-primary {
+        padding-top: 8em; } }
+  @media (min-width: 725px) {
+    .title-box {
+      max-width: 700px; } }
+
+.title-footer {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  line-height: 1; }
+  .title-footer::before, .title-footer::after {
+    content: '';
+    display: block;
+    height: 1px;
+    background: white;
+    opacity: 0.25;
+    margin: .75em 0; }
+
 .text-intro {
   font-size: 1.2rem; }
-
-.grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
-.col {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 100%;
-  flex: 0 0 100%; }
-
-.col--full {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 100%;
-  flex: 0 0 100%; }
 
 .main-nav {
   background: #d31869;
@@ -486,6 +549,16 @@ h2 {
   -webkit-transition: all ease-in-out 250ms;
   -o-transition: all ease-in-out 250ms;
   transition: all ease-in-out 250ms; }
+  @media (min-width: 725px) {
+    .main-nav {
+      position: relative;
+      -webkit-box-flex: 1;
+      -ms-flex: auto;
+      flex: auto;
+      background: none;
+      margin-top: 1em;
+      margin-left: 2em;
+      left: 0; } }
   .main-nav ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -497,11 +570,31 @@ h2 {
     -ms-flex-pack: distribute;
     justify-content: space-around;
     height: 100vh; }
+    @media (min-width: 725px) {
+      .main-nav ul {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        height: auto; } }
   .main-nav li {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    @media (min-width: 725px) {
+      .main-nav li {
+        display: inline-block;
+        border: none;
+        text-align: right; } }
+  .main-nav a {
+    color: white;
+    text-decoration: none;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -511,11 +604,15 @@ h2 {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center; }
-    .main-nav li:hover {
+    @media (min-width: 725px) {
+      .main-nav a {
+        display: inline; } }
+    .main-nav a:hover {
       background: rgba(0, 0, 0, 0.1); }
-  .main-nav a {
-    color: white;
-    text-decoration: none; }
+      @media (min-width: 725px) {
+        .main-nav a:hover {
+          background: none;
+          color: #8e1047; } }
   .main-nav.is-open {
     left: 0; }
 
@@ -526,6 +623,9 @@ h2 {
   right: 1em;
   top: 1em;
   cursor: pointer; }
+  @media (min-width: 725px) {
+    .nav-toggle {
+      display: none; } }
 
 .hamburger, .hamburger::before, .hamburger::after {
   content: '';
@@ -568,7 +668,7 @@ h2 {
 .logo {
   width: 25%;
   min-width: 10rem;
-  max-width: 10rem; }
+  max-width: 15rem; }
 
 .hero {
   background: -webkit-gradient(linear, left top, right top, from(#048ca8), to(#16db93));
@@ -579,18 +679,84 @@ h2 {
   padding-top: 8em;
   padding-bottom: 8em;
   text-align: center; }
+  @media (min-width: 725px) {
+    .hero {
+      text-align: left;
+      padding-bottom: 0;
+      height: 80vmin;
+      min-height: 800px; } }
 
-.hero-img {
-  display: none; }
+@media (min-width: 725px) {
+  .hero-text {
+    margin-top: 10vmax; } }
 
 .sales-points {
-  padding: 10vh 0; }
+  padding: 10vh 0 0; }
   .sales-points .sales-point {
     margin-bottom: 2.5em; }
     .sales-points .sales-point:first-of-type {
       margin-top: 1.5em; }
     .sales-points .sales-point:last-child {
       margin-bottom: 0; }
+    @media (min-width: 725px) {
+      .sales-points .sales-point:first-of-type {
+        margin-top: 0; } }
+
+.promo .bg-primary {
+  text-align: left;
+  padding-left: 7%;
+  padding-top: 7.5em;
+  padding-bottom: 7.5em; }
+
+.promo .img-box {
+  background: url(../img/phone-in-hand.jpg);
+  background-size: cover;
+  background-position: center; }
+
+footer {
+  background: #444;
+  color: white;
+  padding: 5em 0;
+  position: relative; }
+  footer::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: url(../img/logo.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.05; }
+  footer a {
+    color: white; }
+
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 3rem;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  opacity: 0.8;
+  margin: .7em 0; }
+
+.nav-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin: 0 auto; }
+  .nav-footer a {
+    text-decoration: none;
+    font-weight: 700; }
+
+.container--footer {
+  max-width: 25em; }
 
 .btn {
   display: inline-block;
@@ -605,11 +771,50 @@ h2 {
   color: white;
   border: 2px solid #d31869; }
   .btn--primary:hover, .btn--primary:focus {
-    background: #8e1047; }
+    background: #8e1047;
+    border-color: #8e1047; }
 
 .btn--secondary {
   border: 2px solid white;
   color: white; }
   .btn--secondary:hover, .btn--secondary:focus {
     background: white;
-    color: #16db93; }
+    color: #048ca8; }
+
+.cta {
+  background-color: #16db93;
+  background-image: url(../img/call-to-action-background.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 5em 0;
+  background-blend-mode: multiply;
+  color: white;
+  position: relative;
+  overflow: hidden; }
+  @media (min-width: 725px) {
+    .cta {
+      padding: 10em 0; }
+      .cta::before, .cta::after {
+        content: '';
+        display: block;
+        background: #d31869;
+        position: absolute;
+        width: 100%;
+        border: 1em solid white; }
+      .cta::before {
+        top: 0;
+        bottom: -1em;
+        -webkit-transform: skewX(60deg);
+        -ms-transform: skewX(60deg);
+        transform: skewX(60deg);
+        left: -100%; }
+      .cta::after {
+        top: -1em;
+        bottom: 0;
+        -webkit-transform: skewX(60deg);
+        -ms-transform: skewX(60deg);
+        transform: skewX(60deg);
+        right: -100%; } }
+
+.container--cta {
+  width: 70%; }
