--- a/sass/abstracts/_colors.sass
+++ b/sass/abstracts/_colors.sass
@@ -3,9 +3,11 @@ $secondary: rgba(22, 219, 147, 1)
 $accent: rgba(211, 24, 105, 1)
 
 $white: rgb(255, 255, 255)
+$dark: #444
 
-// ====== Text Colors ======= //
-$text-main: $secondary
+// Text colors
+
+$text-main: $main
 $text-inverse: $white
 $text-accent: $accent
 $text-secondary: $main
